--- a/index.html
+++ b/index.html
@@ -12,47 +12,51 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="pin-generator half-width">
-                    <input class="form-control" type="text">
-                    <button class="generate-btn">Generate Pin</button>
+                    <input id="generateInput" class="form-control" type="text">
+                    <button id="generateBtn" class="generate-btn">Generate Pin</button>
                 </div>
             </div>
+
+
             <div class="col-md-6">
                 <div class="input-section half-width">
-                    <input class="form-control" type="text">
+                    <input id="submitInput" class="form-control" type="text">
                     <div class="numbers">
                         <div class="calc-body">
                             <div class="calc-button-row">
-                              <div class="button">7</div>
-                              <div class="button">8</div>
-                              <div class="button">9</div>
+                              <div id="Btn7" class="button">7</div>
+                              <div id="Btn8" class="button">8</div>
+                              <div id="Btn9" class="button">9</div>
                             </div>
                             <div class="calc-button-row">
-                              <div class="button">4</div>
-                              <div class="button">5</div>
-                              <div class="button">6</div>
+                              <div id="Btn4" class="button">4</div>
+                              <div id="Btn5" class="button">5</div>
+                              <div id="Btn6" class="button">6</div>
                             </div>
                             <div class="calc-button-row">
-                              <div class="button">1</div>
-                              <div class="button">2</div>
-                              <div class="button">3</div>
+                              <div id="Btn1" class="button">1</div>
+                              <div id="Btn2" class="button">2</div>
+                              <div id="Btn3" class="button">3</div>
                             </div>
                             <div class="calc-button-row">
-                                <div class="button">&lt;</div>
-                                <div class="button">0</div>
-                                <div class="button">C</div>
+                                <div id="BtnLessthan" class="button">&lt;</div>
+                                <div id="Btn0" class="button">0</div>
+                                <div id="BtnC" class="button">C</div>
                             </div>
                             <div>
-                                <button type="submit" class="submit-btn">Submit</button>
+                                <button id="submitBtn" class="submit-btn" type="submit">Submit</button>
                                 <p class="action-left">3 try left</p>
                             </div>
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="notify-section">
-            <p class="notify">❌ Pin Didn't Match, Please try again</p>
-            <p class="notify">✅ Pin Matched... Secret door is opening for you</p>
+            <p id="notifyDontMatch" class="notify">❌ Pin Didn't Match, Please try again</p>
+            <p id="notifyMatch" class="notify">✅ Pin Matched... Secret door is opening for you</p>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
