--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             </div>
                             <div>
                                 <button id="submitBtn" class="submit-btn" type="submit">Submit</button>
-                                <p class="action-left">3 try left</p>
+                                <p class="action-left"><span id="tryTime">3</span>try left</p>
                             </div>
                     </div>
                 </div>
